# multi-label-text-classification

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  api.py  app.py  bert_celery_app.py  celery_app.py  client.py  definition.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  settings.py  start.sh
.github/ISSUE_TEMPLATE/: config.yaml  experiment.yaml  feature.yaml  fix.yaml
config/: definition.py  settings.py
configuration/2/: config.pbtxt
configuration/4/: config.pbtxt
configuration/8/: config.pbtxt
data/: au_200_p.json  au_2234_p.json  au_450.json  labels.json  rule_data.json  rule_data_v1.json  ychuang.json
data/annotated_data_dir/20220626/: au_800.json
data/annotated_data_dir/20220628/: au_1000.json  au_1300.json
data/annotated_data_dir/20220629/: au_1600.json  au_1900.json  au_1960.json
data_set/: data_loader.py  dataset_class.py
datasets_class/: bert_dataset.py  go_emotion.py
evaluating/: bert_pytorch.py
interface/: bert_model_interface.py  model_interface.py
interface/inference_interface/: bert_inference_interface.py  inference_interface.py
interface/model_interface/: bert_model_interface.py  model_interface.py
metrics/: go_emotion.py  model_size.py  multilabel_classification.py  nultilabel_metrics.py
model_class/: distilbert.py  model_interface.py  rule_model.py
notebooks/: audience_bert.ipynb
predict/: inference.py
prediction/: bert_pytorch.py
preprocess/: data_preprocess.py
preprocess/raw_data_preprocess/: preprocess.py
streamlit_utils/: run_experiment.py  run_process.py
tokenizers/: tokenize.py
tokenizers_class/: tokenize.py
train/: evaluate_flow.py  predict_flow.py  run.py  train_flow.py
training/: bert_pytorch.py
utils/: database_helper.py  enum_helper.py  exception_helper.py  helper.py  inference_helper.py  log_helper.py  log_helpers.py  preprocess_helper.py  train_helper.py
worker/: chinese_bert_classification.py
worker/inference/: bert_triton_inference.py
worker/train/: chinese_bert_classification.py
workers/build_dbs/: databases.py
workers/build_models/: builder.py  go_emotion.py
workers/build_trainers/: train.py
workers/datasets_builder/: loader.py
workers/dbs_builder/: databases.py
workers/models_builder/: builder.py
workers/trainers_builder/: train.py
(+2 files in other folders)
