[tool.poetry]
name = "bert_celery"
version = "0.1.0"
description = ""
authors = ["Weber <ychuang@eland.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.2.7"}
pandas = "^1.4.3"
sklearn = "^0.0"
loguru = "^0.6.0"
transformers = "^4.20.1"
sentencepiece = "^0.1.96"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-1.11.0%2Bcpu-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"},
    {url = "https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
tritonclient = {extras = ["all"], version = "^2.23.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
